<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".QuizFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/quiz_title"
        style="@style/CustomTextView18Bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_status_label"
                style="@style/CustomTextViewBody" />

            <TextView
                android:id="@+id/tv_quiz_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_status"
                style="@style/CustomTextViewItemTitle" />

            <TextView
                android:id="@+id/tv_quiz_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/quiz_desc"
                style="@style/CustomTextViewBody" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>